hopefully fixed all compile errors